--- a/notebooks/table_tennis_generator_ga.ipynb
+++ b/notebooks/table_tennis_generator_ga.ipynb
@@ -18,85 +18,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Gene:  # Match\n",
+    "\n",
+    "class Match:  # Gene\n",
     "    def __init__(self, team_1: Union[List, Set, Tuple], team_2: Union[List, Set, Tuple]):\n",
     "        self.team_1 = set(team_1)\n",
     "        self.team_2 = set(team_2)\n",
     "        assert not self.team_1.intersection(self.team_2), \"No overlapping players between teams\"\n",
     "\n",
-    "        \n",
     "    def __eq__(self, other):\n",
     "        return ((self.team_1 == other.team_1) and (self.team_2 == other.team_2)\n",
-    "               or (self.team_1 == other.team_2) and (self.team_2 == other.team_1))\n",
-    "    \n",
+    "                or (self.team_1 == other.team_2) and (self.team_2 == other.team_1))\n",
+    "\n",
     "    def __hash__(self):\n",
     "        return hash(f\"{sorted(self.team_1)}.{sorted(self.team_2)}\")\n",
-    "    \n",
+    "\n",
     "    def __str__(self):\n",
     "        return f'{self.team_1} - {self.team_2}'\n",
-    "    \n",
+    "\n",
     "    def to_list(self):\n",
     "        return list(self.team_1) + list(self.team_2)\n",
-    "        \n",
-    "# For simplicity, let's start with the case of a single Gene (match) played \n",
+    "\n",
+    "\n",
+    "# For simplicity, let's start with the case of a single Gene (match) played\n",
     "# simultaneously.\n",
-    "        \n",
-    "class Genome:  # Tournament\n",
-    "    def __init__(self, num_players, num_genes, genes: List['Gene']=None):\n",
+    "\n",
+    "class Tournament:  # Genome\n",
+    "    def __init__(self, num_players, num_matches, matches: List['Match'] = None):\n",
     "        self.num_players = num_players\n",
-    "        self.num_genes = num_genes\n",
-    "        if not genes:\n",
-    "            self.genes = [self._make_random_gene() for _ in range(self.num_genes)]\n",
+    "        self.num_matches = num_matches\n",
+    "        if not matches:\n",
+    "            self.matches = [self._make_random_match() for _ in range(self.num_matches)]\n",
     "        else:\n",
-    "            self.genes = genes\n",
-    "    \n",
+    "            self.matches = matches\n",
+    "\n",
     "    @property\n",
     "    def fitness(self):\n",
     "        # number of unique matches\n",
     "        unique_matches = set()\n",
     "        players = []\n",
-    "        for g in self.genes:\n",
+    "        for g in self.matches:\n",
     "            unique_matches.add(g)\n",
     "            players.extend(g.to_list())\n",
     "        return len(unique_matches) * (1 - variance(Counter(players).values()))\n",
-    "        \n",
-    "    def _make_random_gene(self):\n",
-    "        num_players_for_gene = 4\n",
-    "        players = random.sample(range(self.num_players), num_players_for_gene)\n",
-    "        return Gene(players[:num_players_for_gene//2], players[num_players_for_gene//2:])\n",
-    "    \n",
+    "\n",
+    "    def _make_random_match(self):\n",
+    "        num_players_for_match = 4\n",
+    "        players = random.sample(range(self.num_players), num_players_for_match)\n",
+    "        return Match(players[:num_players_for_match // 2], players[num_players_for_match // 2:])\n",
+    "\n",
     "    def mutate(self):\n",
-    "        for i in range(len(self.genes)):\n",
+    "        for i in range(len(self.matches)):\n",
     "            if random.random() < 0.9:\n",
     "                # TODO: do I want mutated gene to be based on original?\n",
-    "                self.genes[i] = self._make_random_gene()\n",
-    "    \n",
+    "                self.matches[i] = self._make_random_match()\n",
+    "\n",
     "    def __str__(self):\n",
-    "        return '\\n'.join([str(g) for g in self.genes])\n",
+    "        return '\\n'.join([str(g) for g in self.matches])\n",
     "\n",
-    "                \n",
-    "def crossover(a: 'Genome', b: 'Genome'):\n",
-    "    offspring_genes = []\n",
-    "    for left, right in zip(a.genes, b.genes):\n",
+    "\n",
+    "def crossover(a: 'Tournament', b: 'Tournament'):\n",
+    "    offspring_matches = []\n",
+    "    for left, right in zip(a.matches, b.matches):\n",
     "        if random.random() < 0.5:\n",
-    "            offspring_genes.append(left)\n",
+    "            offspring_matches.append(left)\n",
     "        else:\n",
-    "            offspring_genes.append(right)\n",
-    "    return Genome(a.num_players, a.num_genes, offspring_genes)\n",
+    "            offspring_matches.append(right)\n",
+    "    return Tournament(a.num_players, a.num_matches, offspring_matches)\n",
     "\n",
-    "def initial_population(size, num_players, num_genes):\n",
+    "\n",
+    "def initial_population(size, num_players, num_matches):\n",
     "    population = []\n",
     "    for _ in range(size):\n",
-    "        population.append(Genome(num_players, num_genes))\n",
+    "        population.append(Tournament(num_players, num_matches))\n",
     "    return population\n",
     "\n",
+    "\n",
     "def next_generation(current_generation):\n",
-    "    gen_by_fitness = sorted(current_generation, key=lambda g: g.fitness)\n",
+    "    tournaments_by_fitness = sorted(current_generation, key=lambda g: g.fitness)\n",
     "    # fittest from current generation will survive unmutated into future generation\n",
-    "    elite = gen_by_fitness[-1]  \n",
+    "    elite = tournaments_by_fitness[-1]\n",
     "    # all genomes from current generation that are in the top 40% based on fitness will reproduce\n",
-    "    breeding_population = set(gen_by_fitness[int(len(current_generation)*0.6):])\n",
-    "    \n",
+    "    breeding_population = set(tournaments_by_fitness[int(len(current_generation) * 0.6):])\n",
+    "\n",
     "    children = [elite]\n",
     "    while len(children) < len(current_generation):\n",
     "        a = random.choice(list(breeding_population))\n",
@@ -104,31 +107,31 @@
     "        child = crossover(a, b)\n",
     "        child.mutate()\n",
     "        children.append(child)\n",
-    "    \n",
+    "\n",
     "    return children\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51\n",
-      "{0, 5} - {9, 4}\n",
-      "{8, 11} - {1, 10}\n",
-      "{6, 7} - {8, 10}\n",
-      "{0, 3} - {11, 7}\n",
-      "{9, 5} - {3, 6}\n",
-      "{4, 6} - {0, 10}\n",
-      "{3, 7} - {8, 5}\n",
-      "{1, 2} - {9, 4}\n",
-      "{8, 1} - {10, 2}\n",
-      "{0, 5} - {2, 11}\n",
-      "Wall time: 2.9 s\n"
+      "11\n",
+      "{6, 7} - {0, 3}\n",
+      "{1, 11} - {10, 6}\n",
+      "{10, 2} - {0, 4}\n",
+      "{3, 4} - {0, 6}\n",
+      "{1, 10} - {5, 7}\n",
+      "{8, 11} - {9, 2}\n",
+      "{1, 2} - {3, 7}\n",
+      "{9, 2} - {3, 7}\n",
+      "{8, 10} - {4, 5}\n",
+      "{11, 5} - {8, 9}\n",
+      "Wall time: 27.6 s\n"
      ]
     }
    ],
@@ -141,7 +144,7 @@
     "elite = sorted(population, key=lambda g: g.fitness)[-1]\n",
     "generation_elite_found = 0\n",
     "\n",
-    "for i in range(100):  # num generations\n",
+    "for i in range(1000):  # num generations\n",
     "    population = next_generation(population)\n",
     "    elite_in_generation = sorted(population, key=lambda g: g.fitness)[-1]\n",
     "    if elite_in_generation.fitness > elite.fitness:\n",
@@ -150,41 +153,28 @@
     "\n",
     "print(generation_elite_found)\n",
     "print(elite)\n",
-    "    "
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Counter({0: 4,\n",
-       "         5: 4,\n",
-       "         9: 3,\n",
-       "         4: 3,\n",
-       "         8: 4,\n",
-       "         11: 3,\n",
-       "         1: 3,\n",
-       "         10: 4,\n",
-       "         6: 3,\n",
-       "         7: 3,\n",
-       "         3: 3,\n",
-       "         2: 3})"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({7: 4, 3: 4, 10: 4, 2: 4, 6: 3, 0: 3, 1: 3, 11: 3, 4: 3, 5: 3, 8: 3, 9: 3})\n"
+     ]
     }
    ],
    "source": [
     "players = []\n",
-    "for g in elite.genes:\n",
+    "for g in elite.matches:\n",
     "    players.extend(g.to_list())\n",
-    "Counter(players)"
+    "print(Counter(players))\n",
+    "    "
    ]
   }
  ],
